updated jarvis profile completely

--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -22,6 +22,7 @@ skills:
     - BRD/FRD
     - User Stories
     - ALM tools (JIRA, ASANA)
+    - Communication Tools(MS Team, ZOOM, SLACK)
     - Confluence
     - UML Modelling
     - BPMN
